--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <!-- Header -->
-    <header></header>
+    <header>
+      <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="logo">
+                    <a href=""><h3>START BOOTSTRAP</h3></a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="hamburger d-flex d-md-none">
+                    <a href=""><i class="fa-solid fa-bars"></i></a>
+                </div>
+                <div class="menu d-none d-md-block">
+                    <ul class="d-flex justify-content-end">
+                        <li><a href="">PORTFOLIO</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </div>  
+    </header>
     <!-- /Header -->
 
     <!-- jumbotron section -->
