Done jumbotron template structure

--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
     <!-- /Header -->
 
     <!-- jumbotron section -->
-    <section id="jumbotron"></section>
+    <section id="jumbotron">
+        <div class="container-jumbo">
+            <div class="row">
+                <div class="col-12 d-flex flex-column align-items-center">
+                    <img src="img/avatar.svg" alt="avatar in jumbotron">
+                    <h1>START BOOTSTRAP</h1>
+                    <!-- icon-star-jumbo -->
+                    <div class="icon-row d-flex">
+                        <div class="col-4 line"><hr class="line-star"></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="col-4 line"><hr class="line-star"></div>
+                    </div>
+                    <h3>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- /jumbotron section -->
 
     <!-- Main -->
