--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
                 <div class="col-12 d-flex flex-column align-items-center">
                     <img src="img/avatar.svg" alt="avatar in jumbotron">
                     <h1>START BOOTSTRAP</h1>
-                    <!-- icon-star-jumbo -->
+                    <!-- icon-star-white -->
                     <div class="icon-row d-flex">
-                        <div class="col-4 line"><hr class="line-star"></div>
-                        <div class="star"><i class="fa-solid fa-star"></i></div>
-                        <div class="col-4 line"><hr class="line-star"></div>
+                        <div class="col-4 line-white"><hr></div>
+                        <div class="star-white"><i class="fa-solid fa-star"></i></div>
+                        <div class="col-4 line-white"><hr></div>
                     </div>
+                    <!-- /icon-star-white -->
                     <h3>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
                 </div>
             </div>
@@ -63,7 +64,38 @@
     <main>
 
         <!-- portfolio section -->
-        <section id="portfolio"></section>
+        <section id="portfolio">
+            <div class="container">
+                <h2 class="text-center">PORTFOLIO</h2>
+                <!-- icon-star-dark -->
+                <div class="icon-row d-flex">
+                    <div class="col-4 line-dark"><hr></div>
+                    <div class="star-dark"><i class="fa-solid fa-star"></i></div>
+                    <div class="col-4 line-dark"><hr></div>
+                </div>
+                <!-- /icon-star-dark -->
+                <div class="row g-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/cabin.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/cake.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/circus.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/game.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/safe.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <img src="img/submarine.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- /portfolio section -->
 
         <!-- about section -->
