About's section structure done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header>
-      <div class="container">
+      <div class="container container-sm container-md">
         <div class="row">
             <div class="col-6">
                 <div class="logo">
@@ -65,7 +65,7 @@
 
         <!-- portfolio section -->
         <section id="portfolio">
-            <div class="container">
+            <div class="container container-sm container-md">
                 <h2 class="text-center">PORTFOLIO</h2>
                 <!-- icon-star-dark -->
                 <div class="icon-row d-flex">
@@ -99,7 +99,37 @@
         <!-- /portfolio section -->
 
         <!-- about section -->
-        <section id="about"></section>
+        <section id="about">
+            <div class="container-about container-sm container-md">
+                <h2 class="text-center">ABOUT</h2>
+                <!-- icon-star-white -->
+                <div class="icon-row d-flex">
+                    <div class="col-4 line-white"><hr></div>
+                    <div class="star-white"><i class="fa-solid fa-star"></i></div>
+                    <div class="col-4 line-white"><hr></div>
+                </div>
+                <!-- /icon-star-white -->
+                <div class="row justify-content-center">
+                    <div class="col-9 col-md-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
+                    </div>
+                    <div class="col-9 col-md-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
+                    </div>
+                    <!-- button white -->
+                    <div class="col-4">
+                        <div class="button-white">
+                            <a class="d-flex" href="">
+                                <i class="fa-solid fa-download"></i>
+                                <span>Download</span>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /button white -->
+                    
+                </div>
+            </div>
+        </section>
         <!-- /about section -->
 
         <!-- form-contact section -->
