form's section structure done

--- a/index.html
+++ b/index.html
@@ -133,7 +133,29 @@
         <!-- /about section -->
 
         <!-- form-contact section -->
-        <section id="form-contact"></section>
+        <section id="form-contact">
+            <div class="container-form container-sm container-md">
+                <h2 class="text-center">CONTACT ME</h2>
+                <!-- icon-star-dark -->
+                <div class="icon-row d-flex">
+                    <div class="col-4 line-dark"><hr></div>
+                    <div class="star-dark"><i class="fa-solid fa-star"></i></div>
+                    <div class="col-4 line-dark"><hr></div>
+                </div>
+                <!-- /icon-star-dark -->
+                <form>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name">
+                    <label for="email">Email Address</label>
+                    <input type="text" id="email" name="email">
+                    <label for="number">Phone Number</label>
+                    <input type="text"id="numberl" name="number">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                    <input type="button" value="Button">
+                </form>
+            </div>
+        </section>
         <!-- /form-contact section -->
 
     </main>
