footer's section structure done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- jumbotron section -->
     <section id="jumbotron">
-        <div class="container-jumbo">
+        <div class="wrapper">
             <div class="row">
                 <div class="col-12 d-flex flex-column align-items-center">
                     <img src="img/avatar.svg" alt="avatar in jumbotron">
@@ -100,7 +100,7 @@
 
         <!-- about section -->
         <section id="about">
-            <div class="container-about container-sm container-md">
+            <div class="wrapper container-sm container-md">
                 <h2 class="text-center">ABOUT</h2>
                 <!-- icon-star-white -->
                 <div class="icon-row d-flex">
@@ -134,7 +134,7 @@
 
         <!-- form-contact section -->
         <section id="form-contact">
-            <div class="container-form container-sm container-md">
+            <div class="wrapper container-sm container-md">
                 <h2 class="text-center">CONTACT ME</h2>
                 <!-- icon-star-dark -->
                 <div class="icon-row d-flex">
@@ -143,7 +143,7 @@
                     <div class="col-4 line-dark"><hr></div>
                 </div>
                 <!-- /icon-star-dark -->
-                <form>
+                <form class="wrapper">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name">
                     <label for="email">Email Address</label>
@@ -162,7 +162,54 @@
     <!-- /Main -->
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <div class="footer-top">
+            <div class="wrapper">
+                
+                <div class="row">
+                    <!-- address -->
+                    <div class="col col-md-4 text-center">
+                        <h4>LOCATION</h4>
+                        <p>2215 John Daniel drive Clark, MO</p>
+                    </div>
+                    <!-- /address -->
+
+                    <!-- social -->
+                    <div class="col col-md-4 text-center">
+                        <h4>AROUND THE WEB</h4>
+                        <a href="">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>    
+                    </div>
+                    <!-- /social -->
+
+                    <!-- freelacer -->
+                    <div class="col col-md-4 text-center">
+                        <h4>ABOUT FREELANCER</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor commodi voluptatum sapiente inventore illo dolores mollitia deleniti nihil at? Ut exercitationem dolores ipsa aliquam alias minima, eaque ipsam consequuntur.</p>
+                    </div>
+                    <!-- /freelacer -->
+                </div>
+
+                
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="wrapper text-center">
+                <p>lorem dolor ipsum</p>
+            </div>
+        </div>
+    </footer>
     <!-- /Footer -->
 
 </body>
