--- a/index.html
+++ b/index.html
@@ -17,21 +17,29 @@
     <header>
       <div class="container container-sm container-md">
         <div class="row">
+            <!-- logo -->
             <div class="col-6">
                 <div class="logo">
                     <a href=""><h3>START BOOTSTRAP</h3></a>
                 </div>
             </div>
+            <!-- menu -->
             <div class="col-6">
-                <div class="hamburger d-flex d-md-none">
+                <div class="hamburger d-flex d-md-none text-end">
                     <a href=""><i class="fa-solid fa-bars"></i></a>
                 </div>
                 <div class="menu d-none d-md-block">
-                    <ul class="d-flex justify-content-end">
-                        <li><a href="">PORTFOLIO</a></li>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">CONTACT</a></li>
-                    </ul>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                          <a class="nav-link fs-4 active" aria-current="page" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link fs-4" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link fs-4" href="#">CONTACT</a>
+                        </li>
+                      </ul>
                 </div>
             </div>
         </div>
@@ -76,7 +84,9 @@
                 <!-- /icon-star-dark -->
                 <div class="row g-3">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/cabin.png" alt="">
+                        <div class="ms_card">
+                            <img src="img/cabin.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <img src="img/cake.png" alt="">
