Added details of jumbotron section

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     <section id="jumbotron">
         <div class="wrapper">
             <div class="row">
-                <div class="col-12 d-flex flex-column align-items-center">
-                    <img src="img/avatar.svg" alt="avatar in jumbotron">
+                <div class="col-12 d-flex flex-column align-items-center gap-3">
+                    <img class="mt-5" src="img/avatar.svg" alt="avatar in jumbotron">
                     <h1>START BOOTSTRAP</h1>
                     <!-- icon-star-white -->
-                    <div class="icon-row d-flex">
+                    <div class="icon-row d-flex mt-4">
                         <div class="col-4 line-white"><hr></div>
                         <div class="star-white"><i class="fa-solid fa-star"></i></div>
                         <div class="col-4 line-white"><hr></div>
                     </div>
                     <!-- /icon-star-white -->
-                    <h3>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
+                    <h3 class="mt-2 mb-5">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
                 </div>
             </div>
         </div>
