--- a/index.html
+++ b/index.html
@@ -69,39 +69,51 @@
     <!-- /jumbotron section -->
 
     <!-- Main -->
-    <main>
+    <main class="mt-5">
 
         <!-- portfolio section -->
         <section id="portfolio">
-            <div class="container container-sm container-md">
+            <div class="container">
                 <h2 class="text-center">PORTFOLIO</h2>
                 <!-- icon-star-dark -->
-                <div class="icon-row d-flex">
+                <div class="icon-row d-flex p-3 mb-3">
                     <div class="col-4 line-dark"><hr></div>
                     <div class="star-dark"><i class="fa-solid fa-star"></i></div>
                     <div class="col-4 line-dark"><hr></div>
                 </div>
                 <!-- /icon-star-dark -->
-                <div class="row g-3">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_card">
+
+                <!-- card -->
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                        <div class="card">
                             <img src="img/cabin.png" alt="">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/cake.png" alt="">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/cake.png" alt="">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/circus.png" alt="">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/circus.png" alt="">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/game.png" alt="">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/game.png" alt="">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/safe.png" alt="">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/safe.png" alt="">
+                        </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <img src="img/submarine.png" alt="">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/submarine.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -113,7 +125,7 @@
             <div class="wrapper container-sm container-md">
                 <h2 class="text-center">ABOUT</h2>
                 <!-- icon-star-white -->
-                <div class="icon-row d-flex">
+                <div class="icon-row d-flex p-3 mb-3">
                     <div class="col-4 line-white"><hr></div>
                     <div class="star-white"><i class="fa-solid fa-star"></i></div>
                     <div class="col-4 line-white"><hr></div>
@@ -147,7 +159,7 @@
             <div class="wrapper container-sm container-md">
                 <h2 class="text-center">CONTACT ME</h2>
                 <!-- icon-star-dark -->
-                <div class="icon-row d-flex">
+                <div class="icon-row d-flex p-3 mb-3">
                     <div class="col-4 line-dark"><hr></div>
                     <div class="star-dark"><i class="fa-solid fa-star"></i></div>
                     <div class="col-4 line-dark"><hr></div>
