Added details of about section

--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
                 <!-- /icon-star-white -->
                 <div class="row justify-content-center">
                     <div class="col-9 col-md-6">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
+                        <p class="fs-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
                     </div>
-                    <div class="col-9 col-md-6">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
+                    <div class="col-9 col-md-6 mb-5">
+                        <p class="fs-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. At ex est amet, ipsa modi tenetur animi unde quos tempore asperiores repellat expedita sapiente quibusdam impedit error! Nihil fugiat nesciunt beatae?</p>
                     </div>
                     <!-- button white -->
-                    <div class="col-4">
-                        <div class="button-white">
-                            <a class="d-flex" href="">
+                    <div class="col-4 d-flex justify-content-center">
+                        <div class="btn btn-outline-primary btn-lg mb-5">
+                            <a class="d-flex align-items-center gap-3" href="">
                                 <i class="fa-solid fa-download"></i>
                                 <span>Download</span>
                             </a>
