--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- form-contact section -->
         <section id="form-contact">
-            <div class="wrapper container-sm container-md">
+            <div class="wrapper container container-sm container-md">
                 <h2 class="text-center">CONTACT ME</h2>
                 <!-- icon-star-dark -->
                 <div class="icon-row d-flex p-3 mb-3">
@@ -165,17 +165,30 @@
                     <div class="col-4 line-dark"><hr></div>
                 </div>
                 <!-- /icon-star-dark -->
+
+                <!-- form-control -->
                 <form class="wrapper">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name">
-                    <label for="email">Email Address</label>
-                    <input type="text" id="email" name="email">
-                    <label for="number">Phone Number</label>
-                    <input type="text"id="numberl" name="number">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message"></textarea>
-                    <input type="button" value="Button">
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="name" placeholder="your name">
+                        <label for="name">Name</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="email" placeholder="name@example.com">
+                        <label for="email">E-mail</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="number" placeholder="your phone number">
+                        <label for="numberl">Phone Number</label>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="5"></textarea>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary btn-lg mb-5">Send</button>
+                    </div>
                 </form>
+                <!-- form-control -->
             </div>
         </section>
         <!-- /form-contact section -->
