--- a/index.html
+++ b/index.html
@@ -198,30 +198,31 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-top">
-            <div class="wrapper">
+        <div class="footer-top p-2 pb-5">
+            <div class="container container-sm container-md">
                 
                 <div class="row">
                     <!-- address -->
                     <div class="col col-md-4 text-center">
-                        <h4>LOCATION</h4>
-                        <p>2215 John Daniel drive Clark, MO</p>
+                        <h4 class="fs-3 mt-5">LOCATION</h4>
+                        <p class="fs-3">2215 John Daniel drive Clark, MO</p>
                     </div>
                     <!-- /address -->
 
                     <!-- social -->
                     <div class="col col-md-4 text-center">
-                        <h4>AROUND THE WEB</h4>
-                        <a href="">
+                        <h4 class="fs-3 mt-5">AROUND THE WEB</h4>
+
+                        <a class="btn btn-outline-primary rounded-circle" href="">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
-                        <a href="">
+                        <a class="btn btn-outline-primary rounded-circle" href="">
                             <i class="fa-brands fa-google-plus-g"></i>
                         </a>
-                        <a href="">
+                        <a class="btn btn-outline-primary rounded-circle" href="">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
-                        <a href="">
+                        <a class="btn btn-outline-primary rounded-circle" href="">
                             <i class="fa-brands fa-linkedin-in"></i>
                         </a>    
                     </div>
@@ -229,8 +230,8 @@
 
                     <!-- freelacer -->
                     <div class="col col-md-4 text-center">
-                        <h4>ABOUT FREELANCER</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor commodi voluptatum sapiente inventore illo dolores mollitia deleniti nihil at? Ut exercitationem dolores ipsa aliquam alias minima, eaque ipsam consequuntur.</p>
+                        <h4 class="fs-3 mt-5">ABOUT FREELANCER</h4>
+                        <p class="fs-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor commodi sapiente inventore.</p>
                     </div>
                     <!-- /freelacer -->
                 </div>
@@ -241,7 +242,7 @@
 
         <div class="footer-bottom">
             <div class="wrapper text-center">
-                <p>lorem dolor ipsum</p>
+                <p>Copyright &copy; Your Website 2022</p>
             </div>
         </div>
     </footer>
